<resources>
    <string name="app_name">LoveCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="try_again">Try Again</string>
    <string name="result">Result</string>
    <string name="_100">100%</string>
    <string name="your_score">Your Score</string>
    <string name="calculate">Calculate</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
</resources>